[package]
name = "mini-roboductor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
futures-util = "0.3.31"
obws = "0.14.0"
qbit-rs = "0.4.7"
reqwest = "0.12.23"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
